# cambium

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  mise.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-task.yml  02-bug.yml  03-rfc.yml
.github/workflows/: autofix.yml  ci.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml
crates/cambium-common/: Cargo.toml
crates/cambium-common/src/: diag.rs  intern.rs  lib.rs  source.rs  span.rs
docs/: architecture.md  design.md
docs/adr/: 0001-rust-toolchain-pinning.md  0002-mise-owns-toolchain-just-owns-tasks.md  README.md
